--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@ $('.nav ul li').hover(function(){
 		</div>
 		<div class="footer_right">
 			<p><span>Copyright © 衡阳市成章实验中学</span><span>学校地址:湖南省衡阳市雁峰区黄白路108号</span><span>邮编：421001</span></p>
-			<p><span><a href="http://web.archive.org/web/20240117043509/https://beian.miit.gov.cn/">湘ICP备15014103号</a></span><span>电话：0734-8496291</span><span>邮箱: hysczrmt@163.com</span></p>
+			<p><span><a href="https://beian.miit.gov.cn/">湘ICP备15014103号</a></span><span>电话：0734-8496291</span><span>邮箱: hysczrmt@163.com</span></p>
  		</div>
  		
                  <img src="./index_files/siteqrcode.png" width="85px" height="85px"> &nbsp;&nbsp;
